--- a/style.css
+++ b/style.css
@@ -58,25 +58,62 @@
     margin-top:4rem;
     justify-content: center;
     gap:1rem;
-    height:40vh;
-    margin-left:10rem;
+    height:50vh;
+    margin-left:5rem;
    
     
 }
 #main-image{
-    height:40vh;
-    width:20vw;;
+    height:50vh;
+    width:30vw;
+    border-radius: 10px;
 }
 #social-image{
     height:25vh;
-    width:5vw;
+    width:4vw;
+    margin-left:4rem;
+    margin-right:.4rem;
+
+    
 }
 .text-div{
-    height:40vh;
+    height:50vh;
     border-radius: 10px;
     background-color:#E5D8FF ;
     color:#6F7373;
     padding:1rem;
     font-size:1.3rem;
-    max-width:40vw;
+    max-width:55vw;
+}
+.hero-section-middle{
+    display:flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top:5rem;
+}
+.hero-section-middle .card{
+    height:10vh;
+    width:20vw;
+    border-radius: 5px;;
+    color:#FFFFFF;
+    font-family:
+    'DM Sans' ;
+    text-align: center;
+    padding:1em;
+}
+#card1{
+    background-color: #929DFF;
+}
+#card2{
+    background-color: #734CF2;
+}
+#card3{
+    background-color: 
+    #D288FF;
+}
+#card4{
+    background-color: #000000;
+}
+#support-icon {
+    height:20vh;
 }
