--- a/style.css
+++ b/style.css
@@ -5,13 +5,19 @@
     box-sizing: border-box;
 
 }
-
+.root{
+    display:flex;
+    flex-direction: column;
+    
+}
 .navbar{
     display:flex;
     height:8vh;
     background-color: #6F6AF7;
     align-items: center;
     justify-content: space-between;
+    position:fixed;
+    width:100vw;
     
 }
 .navbar .links  {
@@ -55,12 +61,12 @@
 .hero-section-top{
     display:flex;
     align-items: center;
-    margin-top:4rem;
+    margin-top:7rem;
     justify-content: center;
     gap:1rem;
     height:50vh;
     margin-left:5rem;
-   
+    
     
 }
 #main-image{
@@ -73,7 +79,9 @@
     width:4vw;
     margin-left:4rem;
     margin-right:.4rem;
-
+    
+   
+    z-index: 999; 
     
 }
 .text-div{
@@ -90,16 +98,20 @@
     align-items: center;
     justify-content: space-evenly;
     margin-top:5rem;
+    max-width:95vw;
+
 }
 .hero-section-middle .card{
-    height:10vh;
-    width:20vw;
+    height:14vh;
+    width:18vw;
     border-radius: 5px;;
     color:#FFFFFF;
+    font-size:1.5em;
     font-family:
     'DM Sans' ;
     text-align: center;
     padding:1em;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 #card1{
     background-color: #929DFF;
@@ -114,6 +126,82 @@
 #card4{
     background-color: #000000;
 }
-#support-icon {
-    height:20vh;
+
+.numbers{
+    display:block;
+    margin-top:.5rem;
 }
+.hero-section-three{
+    display: flex;
+    justify-content:center;
+    align-items: center;
+    margin-top:7rem;
+    height:50vh;
+    width:90vw;
+    max-width:95vw;
+    background-color:
+    #483EFF;
+}
+
+.options{
+    height: 40vh;
+    width:25vw;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    gap:2rem;
+
+}
+.options .mini-cards{
+    height:12vh;
+    width:18vw;
+    border:1px solid black;
+    border-radius: 5px;
+    color:#FFFFFF;
+    font-size:1.5em;
+    font-family:
+    'DM Sans' ;
+    text-align: center;
+    padding:1rem;
+}
+.hero-three-wrapper{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+#info{
+    background-color: #BCE0F6;
+    color:#000000;
+    border:none;
+}
+#settings, #bookmarks{
+    border:3px solid white;
+}
+
+.support-icon {
+    position: fixed;
+    bottom: .2rem; 
+    right: 5vw; 
+    z-index: 999; 
+}
+
+.info-div{
+    height:45vh;
+    width:55vw;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #FFFFFF ;
+    border-radius:4px;
+}
+.support-icon img {
+    width: 10vw; 
+    height: 20vh; 
+    cursor: pointer; 
+}
+
+
+
+
