--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     justify-content: space-between;
     position:fixed;
     width:100vw;
+    padding:1rem;
     
 }
 .navbar .links  {
@@ -35,9 +36,10 @@
     #FFFFFF;
     font-family:
     DM Sans ;
+    font-size:1.2rem;
 }
 .search-bar{
-    height:35px;
+    height:38px;
     width:25vw;
     background-color:#FFFFFF; 
     display:flex;
@@ -48,15 +50,12 @@
 }
 .search-bar div{
     margin:.2rem;
-    padding:.2rem;
+    padding:.3rem;
 }
 .burger-icon img{
-     height:
-     46.61px;
-     width:
-     67px;
-     top:10px;
-     bottom:10px;
+     height:4vh;
+     width:2.5vw;
+     margin:.8rem;
 }
 .hero-section-top{
     display:flex;
@@ -98,6 +97,7 @@
     align-items: center;
     justify-content: space-evenly;
     margin-top:5rem;
+    width:95vw;
     max-width:95vw;
 
 }
@@ -195,6 +195,10 @@
     justify-content: center;
     background-color: #FFFFFF ;
     border-radius:4px;
+}
+.next-button{
+    background-color: #000000;
+    color:white;
 }
 .support-icon img {
     width: 10vw; 
