--- a/style.css
+++ b/style.css
@@ -68,19 +68,25 @@
     
     
 }
+.social-div {
+    height: 25vh; 
+    border:1px solid blueviolet;
+    position: sticky;
+    top: 100px;
+}
 #main-image{
     height:50vh;
     width:30vw;
     border-radius: 10px;
+    
 }
 #social-image{
-    height:25vh;
+    height:100%;
     width:4vw;
     margin-left:4rem;
     margin-right:.4rem;
     
-    position: sticky;
-    top: 0;
+  
   
 }
 .text-div{
@@ -143,6 +149,7 @@
     background-color:
     #483EFF;
     margin-right:3rem;
+    margin-bottom:10rem;
 }
 
 .options{
@@ -193,10 +200,32 @@
     width:55vw;
     display:flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    align-items: space-between;
+    justify-content: space-between;
     background-color: #FFFFFF ;
     border-radius:4px;
+}
+.personal-details{
+    padding:2rem;
+   
+}
+.personal-details h2{
+    font-family:'Inter';
+    color:#04285A;
+    letter-spacing: 2px
+   
+}
+.personal-details p{
+    margin:1rem;
+    font-family: 'Roboto';
+    padding:.2rem;
+    color:#04285A;
+    letter-spacing: 1px
+   
+
+}
+.personal-details p span {
+    font-weight:bold;
 }
 .next-button{
     background-color: #000000;
@@ -206,6 +235,27 @@
     width: 10vw; 
     height: 20vh; 
     cursor: pointer; 
+}
+.button-div {
+    position: relative;
+    
+    width: 95%; /* Ensure the div takes up the entire width */
+    height: 10vh; /* Ensure the div takes up the entire viewport height */
+}
+
+#next-button {
+    position: absolute;
+    bottom:1rem;
+    right: 0;
+    height:7vh;
+    width:15%;
+    background-color: black;
+    color:white;
+    font-size:1rem;
+    border-radius: 3px;
+    padding:.5rem;
+    font-family: 'Roboto';
+    letter-spacing: 1px
 }
 
 
