--- a/style.css
+++ b/style.css
@@ -89,15 +89,29 @@
   
   
 }
-.text-div{
+.text-div {
     height:50vh;
-    border-radius: 10px;
-    background-color:#E5D8FF ;
-    color:#6F7373;
-    padding:1rem;
-    font-size:1.3rem;
-    max-width:55vw;
+    
+   
+    width:55vw;
 }
+.text-div textarea {
+    border: none; 
+    outline: none; 
+    resize: none; 
+    overflow: hidden; 
+    background-color:#E5D8FF ; 
+    width: 100%; 
+    height: 100%; 
+    padding: 0.5rem; 
+    font-family: 'Inter'; 
+    color:#6F7373; 
+    font-size: 1.3rem; 
+    line-height: 1.5; 
+    border-radius: 10px;
+    
+}
+
 .hero-section-middle{
     display:flex;
     align-items: center;
