--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 .root{
     display:flex;
     flex-direction: column;
+    position: relative;
     
 }
 .navbar{
@@ -65,15 +66,24 @@
     gap:1rem;
     height:50vh;
     margin-left:5rem;
+    width:90vw;
     
     
 }
+
 .social-div {
-    height: 25vh; 
-    border:1px solid blueviolet;
-    position: sticky;
-    top: 100px;
+    position: fixed;
+    top: 200px;
+    right: 0;
+    transition: top 0.3s ease,bottom 0.3s ease;
 }
+
+.sticky {
+    top: 100px; 
+    position: fixed;
+    right: 0;
+}
+
 #main-image{
     height:50vh;
     width:30vw;
@@ -91,9 +101,9 @@
 }
 .text-div {
     height:50vh;
-    
-   
     width:55vw;
+   
+    max-width:55vw;
 }
 .text-div textarea {
     border: none; 
